add ui improvments and Features compenent

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Demirci Yazılım - Dijital Dönüşüm Çözümleri</title>
+    <meta name="description" content="Demirci Yazılım ile dijital dönüşüm yolculuğunuza başlayın. Web tasarım, grafik tasarım, e-ticaret ve daha fazlası." />
+    <meta name="theme-color" content="#000000" />
   </head>
-  <body>
+  <body class="bg-black text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
