update mini ui changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/assets/Demirci_D_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demirci Yazılım - Dijital Dönüşüm Çözümleri</title>
     <meta name="description" content="Demirci Yazılım ile dijital dönüşüm yolculuğunuza başlayın. Web tasarım, grafik tasarım, e-ticaret ve daha fazlası." />
